feat: 🎉 調整主揪登入及登入後驗證
